--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev -p 3000",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"type-check": "tsc --project tsconfig.json --pretty --noEmit && echo "
 	},
 	"dependencies": {
 		"@ant-design/nextjs-registry": "^1.0.2",
