--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"lucide-react": "^0.468.0",
 		"next": "14.0.4",
 		"next-auth": "^4.24.11",
+		"next-intl": "^3.26.3",
 		"next-themes": "^0.4.4",
 		"react": "^18",
 		"react-dom": "^18",
