--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@ant-design/nextjs-registry": "^1.0.2",
 		"@reduxjs/toolkit": "^2.5.0",
 		"antd": "^5.22.5",
+		"embla-carousel-react": "^8.5.2",
 		"lucide-react": "^0.468.0",
 		"next": "14.0.4",
 		"next-auth": "^4.24.11",
